--- a/CourseMate/Views/Post/Details.cshtml
+++ b/CourseMate/Views/Post/Details.cshtml
@@ -555,10 +555,10 @@
             <input type="hidden" name="postId" value="@Model.Id" />
             <textarea name="content" required placeholder="Write your comment here..."></textarea>
             <div class="form-actions">
-              <div class="anonymous-checkbox">
+              @* <div class="anonymous-checkbox">
                 <input type="checkbox" id="IsAnonymous" name="isAnonymous" />
                 <label for="IsAnonymous">Post as Anonymous</label>
-              </div>
+              </div> *@
               <button type="submit" class="btn-submit">Post Comment</button>
             </div>
           </form>
